Reto | Mercadotecnia telefónica
Reto | Mercadotecnia telefónica con aprendizaje supervisado

--- a/Solucion_Reto_SC_63_Cesar_Torres.ipynb
+++ b/Solucion_Reto_SC_63_Cesar_Torres.ipynb
@@ -38,14 +38,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 244
         },
         "id": "T273IyMoYCuf",
-        "outputId": "05d7495c-c3d7-4dcf-e18b-ddf407b9a99c"
+        "outputId": "23cf7caa-ac60-40f8-8fba-3f269f0e58a0"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-299b3ea6-6726-4288-b871-87bc4fbf8fab\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4f19180b-6e1a-43f5-a22c-7afc6ceea66a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -213,7 +213,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-299b3ea6-6726-4288-b871-87bc4fbf8fab')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f19180b-6e1a-43f5-a22c-7afc6ceea66a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -265,12 +265,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-299b3ea6-6726-4288-b871-87bc4fbf8fab button.colab-df-convert');\n",
+              "        document.querySelector('#df-4f19180b-6e1a-43f5-a22c-7afc6ceea66a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-299b3ea6-6726-4288-b871-87bc4fbf8fab');\n",
+              "        const element = document.querySelector('#df-4f19180b-6e1a-43f5-a22c-7afc6ceea66a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -290,8 +290,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-67404d10-e495-439a-ada8-a14780bcb0f1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-67404d10-e495-439a-ada8-a14780bcb0f1')\"\n",
+              "<div id=\"df-6ddc9f7a-218d-46e8-ae92-0444eaa90aff\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6ddc9f7a-218d-46e8-ae92-0444eaa90aff')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -410,7 +410,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-67404d10-e495-439a-ada8-a14780bcb0f1 button');\n",
+              "        document.querySelector('#df-6ddc9f7a-218d-46e8-ae92-0444eaa90aff button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -427,7 +427,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 24
         }
       ],
       "source": [
@@ -472,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qkCrJ83abF-S",
-        "outputId": "72e5292f-0dfb-4b95-c157-ee7618c7e9f1"
+        "outputId": "ca8531f9-cac5-4df3-f8f6-f38d74f77e6f"
       },
-      "execution_count": 3,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,6 +581,9 @@
         "\n",
         "# Codificamos la columan 'y' con LabelEncoder\n",
         "label_encoder = LabelEncoder()\n",
+        "default_encoded = label_encoder.fit_transform(data['default'])\n",
+        "housing_encoded = label_encoder.fit_transform(data['housing'])\n",
+        "loan_encoded = label_encoder.fit_transform(data['loan'])\n",
         "y_encoded = label_encoder.fit_transform(data['y'])\n",
         "\n",
         "# Ajustamos y transformamos los datos (exceptuando 'y')\n",
@@ -600,6 +603,9 @@
         "transformed_df = pd.DataFrame(transformed_data, columns=final_columns)\n",
         "\n",
         "# Añadimos la variable objetivo codificada al final\n",
+        "transformed_df['default'] = default_encoded\n",
+        "transformed_df['housing'] = housing_encoded\n",
+        "transformed_df['loan'] = loan_encoded\n",
         "transformed_df['y'] = y_encoded\n",
         "\n",
         "# Mostramos la información del DataFrame transformado\n",
@@ -611,9 +617,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4STHpa1tbnRx",
-        "outputId": "dadd9015-aba6-4569-f11e-d755a88cfefc"
+        "outputId": "1bed6934-b0ca-4397-a871-6225eb041d4a"
       },
-      "execution_count": 4,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +627,7 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 9000 entries, 0 to 8999\n",
-            "Data columns (total 41 columns):\n",
+            "Data columns (total 44 columns):\n",
             " #   Column             Non-Null Count  Dtype  \n",
             "---  ------             --------------  -----  \n",
             " 0   education          9000 non-null   float64\n",
@@ -664,9 +670,12 @@
             " 37  campaign           9000 non-null   float64\n",
             " 38  pdays              9000 non-null   float64\n",
             " 39  previous           9000 non-null   float64\n",
-            " 40  y                  9000 non-null   int64  \n",
-            "dtypes: float64(40), int64(1)\n",
-            "memory usage: 2.8 MB\n",
+            " 40  default            9000 non-null   int64  \n",
+            " 41  housing            9000 non-null   int64  \n",
+            " 42  loan               9000 non-null   int64  \n",
+            " 43  y                  9000 non-null   int64  \n",
+            "dtypes: float64(40), int64(4)\n",
+            "memory usage: 3.0 MB\n",
             "None\n",
             "   education  job_blue-collar  job_entrepreneur  job_housemaid  \\\n",
             "0        3.0              0.0               0.0            0.0   \n",
@@ -682,21 +691,21 @@
             "3             0.0          0.0                0.0           0.0          0.0   \n",
             "4             0.0          0.0                0.0           0.0          0.0   \n",
             "\n",
-            "   job_technician  ...  poutcome_success  poutcome_unknown   age  balance  \\\n",
-            "0             0.0  ...               1.0               0.0  31.0   2666.0   \n",
-            "1             0.0  ...               0.0               1.0  29.0   1584.0   \n",
-            "2             0.0  ...               0.0               1.0  41.0   2152.0   \n",
-            "3             0.0  ...               0.0               1.0  50.0     84.0   \n",
-            "4             0.0  ...               1.0               0.0  40.0      0.0   \n",
+            "   job_technician  ...  balance   day  duration  campaign  pdays  previous  \\\n",
+            "0             0.0  ...   2666.0  10.0     318.0       2.0   97.0       6.0   \n",
+            "1             0.0  ...   1584.0   6.0     245.0       1.0   -1.0       0.0   \n",
+            "2             0.0  ...   2152.0  17.0     369.0       1.0   -1.0       0.0   \n",
+            "3             0.0  ...     84.0  17.0      18.0       8.0   -1.0       0.0   \n",
+            "4             0.0  ...      0.0  28.0     496.0       2.0  182.0      11.0   \n",
             "\n",
-            "    day  duration  campaign  pdays  previous  y  \n",
-            "0  10.0     318.0       2.0   97.0       6.0  1  \n",
-            "1   6.0     245.0       1.0   -1.0       0.0  1  \n",
-            "2  17.0     369.0       1.0   -1.0       0.0  0  \n",
-            "3  17.0      18.0       8.0   -1.0       0.0  0  \n",
-            "4  28.0     496.0       2.0  182.0      11.0  1  \n",
+            "   default  housing  loan  y  \n",
+            "0        0        0     0  1  \n",
+            "1        0        0     0  1  \n",
+            "2        0        1     0  0  \n",
+            "3        0        1     0  0  \n",
+            "4        0        0     0  1  \n",
             "\n",
-            "[5 rows x 41 columns]\n"
+            "[5 rows x 44 columns]\n"
           ]
         }
       ]
@@ -763,9 +772,9 @@
           "height": 1000
         },
         "id": "Ic4J59L9JCO4",
-        "outputId": "f6776ae0-f71a-4104-a604-8a0199810930"
+        "outputId": "c7ee8042-3478-43a0-8b97-d2b398fe1166"
       },
-      "execution_count": 5,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -969,9 +978,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ll_p5_PscVtC",
-        "outputId": "d4331347-0d8b-43f3-9d05-6fb6c33e8406"
+        "outputId": "55a01914-5c0e-4a89-d7c0-82364bd69546"
       },
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,7 +995,7 @@
             "Skewness de previous: 7.682285869595014\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 9000 entries, 0 to 8999\n",
-            "Data columns (total 41 columns):\n",
+            "Data columns (total 44 columns):\n",
             " #   Column             Non-Null Count  Dtype  \n",
             "---  ------             --------------  -----  \n",
             " 0   education          9000 non-null   float64\n",
@@ -1029,9 +1038,12 @@
             " 37  campaign           9000 non-null   float64\n",
             " 38  pdays              9000 non-null   float64\n",
             " 39  previous           9000 non-null   float64\n",
-            " 40  y                  9000 non-null   int64  \n",
-            "dtypes: float64(40), int64(1)\n",
-            "memory usage: 2.8 MB\n",
+            " 40  default            9000 non-null   int64  \n",
+            " 41  housing            9000 non-null   int64  \n",
+            " 42  loan               9000 non-null   int64  \n",
+            " 43  y                  9000 non-null   int64  \n",
+            "dtypes: float64(40), int64(4)\n",
+            "memory usage: 3.0 MB\n",
             "None\n",
             "   education  job_blue-collar  job_entrepreneur  job_housemaid  \\\n",
             "0        3.0              0.0               0.0            0.0   \n",
@@ -1047,21 +1059,21 @@
             "3             0.0          0.0                0.0           0.0          0.0   \n",
             "4             0.0          0.0                0.0           0.0          0.0   \n",
             "\n",
-            "   job_technician  ...  poutcome_success  poutcome_unknown       age  \\\n",
-            "0             0.0  ...               1.0               0.0 -0.865132   \n",
-            "1             0.0  ...               0.0               1.0 -1.036605   \n",
-            "2             0.0  ...               0.0               1.0 -0.007764   \n",
-            "3             0.0  ...               0.0               1.0  0.763867   \n",
-            "4             0.0  ...               1.0               0.0 -0.093501   \n",
+            "   job_technician  ...   balance       day  duration  campaign     pdays  \\\n",
+            "0             0.0  ...  0.390563 -0.673417  0.311701 -0.025259  0.431706   \n",
+            "1             0.0  ...  0.033567 -1.152755  0.039359 -0.867890 -0.478348   \n",
+            "2             0.0  ...  0.220974  0.165425  0.467137 -0.867890 -0.478348   \n",
+            "3             0.0  ... -0.461344  0.165425 -2.644547  2.257858 -0.478348   \n",
+            "4             0.0  ... -0.489059  1.483605  0.776399 -0.025259  1.221038   \n",
             "\n",
-            "    balance       day  duration  campaign     pdays  previous  y  \n",
-            "0  0.390563 -0.673417  0.311701 -0.025259  0.431706  2.704550  1  \n",
-            "1  0.033567 -1.152755  0.039359 -0.867890 -0.478348 -0.511988  1  \n",
-            "2  0.220974  0.165425  0.467137 -0.867890 -0.478348 -0.511988  0  \n",
-            "3 -0.461344  0.165425 -2.644547  2.257858 -0.478348 -0.511988  0  \n",
-            "4 -0.489059  1.483605  0.776399 -0.025259  1.221038  3.595497  1  \n",
+            "   previous  default  housing  loan  y  \n",
+            "0  2.704550        0        0     0  1  \n",
+            "1 -0.511988        0        0     0  1  \n",
+            "2 -0.511988        0        1     0  0  \n",
+            "3 -0.511988        0        1     0  0  \n",
+            "4  3.595497        0        0     0  1  \n",
             "\n",
-            "[5 rows x 41 columns]\n"
+            "[5 rows x 44 columns]\n"
           ]
         }
       ]
@@ -1109,9 +1121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ilr0lz3VcpyF",
-        "outputId": "306f6ce4-7578-4a54-9a05-632d2940a904"
+        "outputId": "b5bea5ad-ff57-420b-d13a-ad567f6420bf"
       },
-      "execution_count": 7,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1187,9 +1199,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XW_BPWIwdHps",
-        "outputId": "91614c5b-b689-4a44-9d16-ac4073685663"
+        "outputId": "325ff7d1-ab29-4200-94d2-15f5331b5baa"
       },
-      "execution_count": 9,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1273,9 +1285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NfNWRluwdsnh",
-        "outputId": "5f6afe18-3012-4c12-8c38-415e0b4f6503"
+        "outputId": "7a148770-a09e-46ba-d9e0-2b45a52fbe81"
       },
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,17 +1297,17 @@
             "Mejores parámetros encontrados en GridSearchCV: {'hidden_layer_sizes': (15, 4), 'max_iter': 5000}\n",
             "\n",
             "Matriz de Confusión en validación:\n",
-            "[[886 172]\n",
-            " [121 621]]\n",
+            "[[901 157]\n",
+            " [135 607]]\n",
             "\n",
             "Reporte de Clasificación en validación:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.88      0.84      0.86      1058\n",
-            "           1       0.78      0.84      0.81       742\n",
+            "           0       0.87      0.85      0.86      1058\n",
+            "           1       0.79      0.82      0.81       742\n",
             "\n",
             "    accuracy                           0.84      1800\n",
-            "   macro avg       0.83      0.84      0.83      1800\n",
+            "   macro avg       0.83      0.83      0.83      1800\n",
             "weighted avg       0.84      0.84      0.84      1800\n",
             "\n"
           ]
@@ -1344,26 +1356,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g4IA7NKOIgce",
-        "outputId": "8995e9d8-8e4d-4e68-b4f9-243830e884d5"
+        "outputId": "f6f7f710-ae2e-46da-a12c-127440a288af"
       },
-      "execution_count": 13,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Matriz de confusión en prueba:\n",
-            " [[871 134]\n",
-            " [151 644]]\n",
+            " [[840 165]\n",
+            " [104 691]]\n",
             "Reporte de Clasificación en prueba:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.85      0.87      0.86      1005\n",
-            "           1       0.83      0.81      0.82       795\n",
+            "           0       0.89      0.84      0.86      1005\n",
+            "           1       0.81      0.87      0.84       795\n",
             "\n",
-            "    accuracy                           0.84      1800\n",
-            "   macro avg       0.84      0.84      0.84      1800\n",
-            "weighted avg       0.84      0.84      0.84      1800\n",
+            "    accuracy                           0.85      1800\n",
+            "   macro avg       0.85      0.85      0.85      1800\n",
+            "weighted avg       0.85      0.85      0.85      1800\n",
             "\n"
           ]
         }
